--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
@@ -39,6 +39,9 @@ ENV TENSORFLOW_MODELS=${TOPDIR}/playbooks/TensorFlow_Models
 ENV NCCL_INSTALLATION=${TOPDIR}/playbooks/nccl_installation
 ENV CUDNN_INSTALLATION=${TOPDIR}/playbooks/cudnn_installation
 
+# Set scripts path
+ENV SCRIPTS=${TOPDIR}/scripts
+
 # Create folders for playbooks and folder for playbooks cache
 RUN mkdir -p ${FFTW_PREREQS_PLAYBOOK} && \
     mkdir -p ${TF_PREREQS_PLAYBOOK} && \
@@ -47,6 +50,7 @@ RUN mkdir -p ${FFTW_PREREQS_PLAYBOOK} && \
     mkdir -p ${TENSORFLOW_MODELS} && \
     mkdir -p ${NCCL_INSTALLATION} && \
     mkdir -p ${CUDNN_INSTALLATION} && \
+    mkdir -p ${SCRIPTS} && \
     mkdir -p ${TOPDIR}/.cache
 
 # Copy playbooks and scripts
@@ -57,6 +61,8 @@ COPY TensorFlow/playbooks/TensorFlow_installation ${TENSORFLOW_INSTALLATION}
 COPY TensorFlow/playbooks/TensorFlow_Models ${TENSORFLOW_MODELS}
 COPY TensorFlow/playbooks/nccl_installation ${NCCL_INSTALLATION}
 COPY TensorFlow/playbooks/cudnn_installation ${CUDNN_INSTALLATION}
+COPY helper_scripts/Python/install_python_from_source.sh
+COPY helper_scripts/Ansible/install_ansible_from_source.sh
 
 # Put on port 8080
 EXPOSE 8080
@@ -64,50 +70,23 @@ EXPOSE 8080
 # Create symlink for NumPy so that it can find endian.h
 RUN ln -s /usr/include/endian.h /usr/include/sys/endian.h
 
-# Install Python version ${PYTHON_VERSION}
-RUN yum -y install gcc \
-                   make \
-                   openssl-devel \
-                   wget \
-                   zlib-devel && \
-    cd /tmp && \
-    wget https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz && \
-    tar xvf Python-${PYTHON_VERSION}.tgz && \
-    cd Python-${PYTHON_VERSION} && \
-    ./configure --enable-optimizations && \
-    make && \
-    make install && \
-    cd .. && \
-    rm -rf Python-${PYTHON_VERSION} && \
-    rm -rf Python-${PYTHON_VERSION}.tgz && \
-    rm -rf /var/cache/yum/*
-
-# Install Ansible
-RUN yum -y install git && \
-    cd /tmp && \
-    git clone https://github.com/ansible/ansible.git && \
-    cd ansible && \
-    git checkout tags/${ANSIBLE_VERSION} && \
-    pip3 install -r requirements.txt && \
-    pip3 install packaging && \
-    sed -i "s/PYTHON=python/PYTHON=python3/g" Makefile && \
-    make && \
-    make install && \
-    cd .. && \
-    rm -rf ansible
+# Install Python version ${PYTHON_VERSION} from source and Ansible version ${ANSIBLE_VERSION} from source
+RUN cd ${SCRIPTS} && \
+    sh install_python_from_source.sh ${PYTHON_VERSION}
+    sh install_ansible_from_source.sh ${ANSIBLE_VERSION}
 
 # Install FFTW + TensorFlow prerequisites via Ansible and pip3
 RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
     PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_ubi: 'yes', update_yum: 'no', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
     cd ${TF_PREREQS_PLAYBOOK} && \
-    PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_s2i_ubi: 'yes', ansible_python_interpreter: '/usr/bin/python2.7'}" && \
-    pip3 install awscli
+    PYTHONPATH=/usr/lib/python2.7 ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '7', use_s2i_ubi: 'yes', ansible_python_interpreter: '/usr/bin/python2.7'}"
 
 # Create and give user permissions to modify certain directories that are required to run the Ansible
 # playbooks that are being pulled into this Dockerfile. Also allow /usr/local/cuda to be writable and
 # allow /.aws to be writeable in case the user wants to use an AWS s3 bucket to download NCCL + cuDNN
 RUN chmod 777 -R /usr/libexec/s2i && \
     chmod g=u /etc/passwd /etc/group && \
+    chmod g=u /etc/subuid /etc/subgid && \
     mkdir -p ${TOPDIR}/.ansible/tmp && \
     chmod -R 777 ${TOPDIR}/.ansible && \
     mkdir -p ${TOPDIR}/.cache && \
@@ -115,11 +94,8 @@ RUN chmod 777 -R /usr/libexec/s2i && \
     chmod 777 ${TOPDIR} && \
     touch ${TOPDIR}/.gitconfig && \
     chmod 777 ${TOPDIR}/.gitconfig && \
-    mkdir ${TOPDIR}/.aws && \
     mkdir -p ${TOPDIR}/.cache/bazel && \
-    chmod -R 777 ${TOPDIR}/.cache/bazel && \
-    chmod -R 777 ${TOPDIR}/.aws && \
-    chmod -R 777 /usr/local/cuda
+    chmod -R 777 ${TOPDIR}/.cache/bazel
 
 # Set Ansible remote tmp
 RUN echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
