Forgot to add namespace 'openshift-image-registry'

--- a/TensorFlow/OpenShift/setup/images/Makefile.cuda_rhel7
+++ b/TensorFlow/OpenShift/setup/images/Makefile.cuda_rhel7
@@ -16,11 +16,11 @@ patch_registry:
 build:
 	oc project openshift-image-registry
 	$(IMAGE_BUILDER) login -u '$(REDHAT_IO_PULL_ID)|$(REDHAT_IO_PULL_USER)' -p $(REDHAT_IO_PULL_TOKEN) registry.redhat.io
-	$(IMAGE_BUILDER) build --tag $(shell oc get route default-route -n openshift-image-registry --template='{{ .spec.host }}')/cuda:rhel7_with_toolkit -f Dockerfiles/custom/rhel7/cuda/Dockerfile.rhel7_cuda10_complete ../../../
+	$(IMAGE_BUILDER) build --tag $(shell oc get route default-route -n openshift-image-registry --template='{{ .spec.host }}')/openshift-image-registry/cuda:rhel7-with-toolkit -f Dockerfiles/custom/rhel7/cuda/Dockerfile.rhel7_cuda10_complete ../../../
 
 push:
 	$(IMAGE_BUILDER) login -u default -p $(PUSH_TOKEN) $(shell oc get route default-route -n openshift-image-registry --template='{{ .spec.host }}')
-	$(IMAGE_BUILDER) push $(shell oc get route default-route -n openshift-image-registry --template='{{ .spec.host }}')/cuda:rhel7_with_toolkit --tls-verify=false
+	$(IMAGE_BUILDER) push $(shell oc get route default-route -n openshift-image-registry --template='{{ .spec.host }}')/openshift-image-registrt/cuda:rhel7-with-toolkit --tls-verify=false
 
 clean:
 	$(IMAGE_BUILDER) rmi localhost/cuda:rhel7_with_toolkit
