Setting work directory and CMD

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
@@ -106,5 +106,11 @@ RUN echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.c
     echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${TENSORFLOW_INSTALLATION}/ansible.cfg && \
     echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${TENSORFLOW_MODELS}/ansible.cfg
 
+# Set work directory
+WORKDIR ${TOPDIR}
+
 # Set user to '1001'
 USER 1001
+
+# Set CMD
+CMD ["/usr/libexec/s2i/run"]
