Setting APPDIR to '/home/benchmarks_app' to see if the build will complete

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
@@ -27,11 +27,11 @@ EXPOSE 8080
 ENV YUM_TIMEOUT=300
 RUN sed -i "/[main]/a timeout=${YUM_TIMEOUT}" /etc/yum.conf
 
-# Set app directory
-ENV APPDIR="/benchmark_app"
-
 # Set home dir
 ENV HOME=/home
+
+# Set app directory
+ENV APPDIR="${HOME}/benchmark_app"
 
 # Set user
 ENV USER=1001
