Add 'become_user: root' in place of 'become: yes'

--- a/TensorFlow/playbooks/package_installation/play.yaml
+++ b/TensorFlow/playbooks/package_installation/play.yaml
@@ -2,7 +2,7 @@
 
 - hosts: localhost
   connection: local
-  become: yes
+  become_user: root
 
   vars:
     rhel_ver: '{{ rhel_version | default("7") }}'
