Removing old Ansible vars (USE_GPU, USE_CPU) and replacing them with 'DEVICE'. Also fixing typo in play.yaml. Updating .s2i_fftw/bin/assemble, too.

--- a/TensorFlow/playbooks/TensorFlow_installation/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/play.yaml
@@ -23,7 +23,7 @@
     USE_OPENBLAS: '{{ use_openblas | default("no") }}'
 
     # Use CPU or GPU?
-    DEVICE: '{{ devuce | default("cpu") }}'
+    DEVICE: '{{ device | default("cpu") }}'
 
     # Paths to CUDA/NVIDIA libraries
     NCCL_INSTALL_PATH: '{{ nccl_install_path | default("/home/nccl") }}'
