--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_ubi7_cuda10
@@ -92,21 +92,21 @@ RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
 
 # Create and give user permissions to modify certain directories that are required to run the Ansible
 # playbooks that are being pulled into this Dockerfile. Also allow /usr/local/cuda to be writable and
-# allow /.aws to be writeable in case the user wants to use an AWS s3 bucket to download NCCL + cuDNN
+# allow /.aws to be writeable in case the user wants to use an AWS s3 bucket to download NCCL, cuDNN,
+# and/or TensorRT
 RUN chmod -R 777 /usr/libexec/s2i && \
     chmod g=u /etc/passwd /etc/group && \
     chmod g=u /etc/subuid /etc/subgid && \
-    mkdir -p ${APPDIR}/../.ansible/tmp && \
-    mkdir -p ${APPDIR}/../.aws && \
-    mkdir -p ${APPDIR}/../.cache/bazel && \
+    mkdir -p ${HOME}/.ansible/tmp && \
+    mkdir -p ${HOME}/.aws && \
+    mkdir -p ${HOME}/.cache/bazel && \
     touch ${APPDIR}/.gitconfig && \
     chmod -R 777 /usr/local/cuda && \
-    chmod -R 777 ${HOME}
-
-# Set Ansible remote tmp
-RUN echo "remote_tmp = ${APPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
-    echo "remote_tmp = ${APPDIR}/.ansible/tmp" >> ${TENSORFLOW_INSTALLATION}/ansible.cfg && \
-    echo "remote_tmp = ${APPDIR}/.ansible/tmp" >> ${TENSORFLOW_MODELS}/ansible.cfg
+    chmod -R 777 ${HOME}/.ansible && \
+    chmod -R 777 ${HOME}/.aws && \
+    chmod -R 777 ${HOME}/.cache && \
+    pip3 install awscli && \
+    rm -rf /var/cache/yum/*
 
 # Set work directory
 WORKDIR ${APPDIR}
